# rust-bridge-demos

./: .editorconfig  .gitignore  AGENTS.md  GitHub Agentマニュアル.md  GitHub Issue 用途別 Agent サンプル集.md  README.md  rust-bridge-demos.sln
.github/agents/: README.md  issue-agent_bug-analysis_pro.yaml  issue-agent_design-review_pro.yaml  issue-agent_onboarding.yaml  issue-agent_refactor_pro.yaml  issue-agent_refine.yaml  issue-agent_release-note.yaml  issue-agent_root-cause_pro.yaml  issue-agent_spec.yaml  issue-agent_summarize.yaml  issue-agent_test-automation.yaml  issue-agent_triage-lite.yaml  issue-agent_triage_lite.yaml  issue-pr-agent_localization_pro.yaml  issue-pr-agent_summarize.yaml  issue-pr-agent_wpf.yaml  pr-agent-code-review.yaml
.github/agents/issue/analysis/: issue-agent_onboarding.yaml  (+3 more)
.github/workflows/: py-demo.yml
core/: Cargo.toml
core/src/: lib.rs
core/src/api/: evaluate.rs  mod.rs  result.rs  shape.rs
core/src/domain/: metrics.rs  mod.rs  shape.rs
dotnet-bridge/: AreaResultDto.cs  MessagePackBridge.cs  NativeMethods.cs  README.md  RectangleDto.cs  ShapeApi.cs  dotnet-bridge.csproj
dotnet-bridge/MessagePacks/: AreaResultDto.cs  RectangleDto.cs
dotnet-bridge/Properties/: launchSettings.json
dotnet-demo/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  dotnet-demo.csproj
dotnet-demo/Properties/: launchSettings.json
dotnet-demo/ViewModels/: MainViewModel.cs
messagepack-bridge/: Cargo.toml
messagepack-bridge/src/: lib.rs
py-bridge/: Cargo.toml
py-bridge/src/: lib.rs
py-demo/: main.py
py-demo/tests/: test_area.py
(+11 files in other folders)
