[package]
name = "messagepack-bridge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
rust_bridge_core = { path = "../core" }

serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
libc = "0.2"

[profile.dev]
debug = true          # デバッグ情報を出力
split-debuginfo = 'unpacked'  # PDB を DLL と同じフォルダに出力
